@@ -617,7 +617,7 @@
 		if #deps > 0 then
 			_p(1,'<ItemGroup>')
 			for _, dep in ipairs(deps) do
-				local deppath = path.getrelative(prj.solution.location, vstudio.projectfile(dep))
+				local deppath = path.getrelative(prj.location, vstudio.projectfile(dep))
 				_p(2,'<ProjectReference Include=\"%s\">', path.translate(deppath, "\\"))
 				_p(3,'<Project>{%s}</Project>', dep.uuid)
 				_p(2,'</ProjectReference>')
