@@ -54,6 +54,7 @@
 * Bug 3413866: Incorrect VS200x .csproj relative source paths
 * Patch 3111264: Allow path.join() to accept any number of args
 * Patch 3353975: Support usage of premake as a library (Konstantin Tokarev)
+* Patch 3505903: Fix VC2010 project reference paths (Pavel Czerný)
 
 
 -------
